--- a/exercise-3.html
+++ b/exercise-3.html
@@ -5,6 +5,12 @@
     <title></title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
+    $(function(){
+      $('#the-button').click(function (){
+        $('#the-message').text('You clicked me!');
+        $(this).text('Click again?');
+      })
+    });
     /*
     When the button is clicked, change the text of the paragraph #the-message to "You clicked me!", and the text of the button #the-button to "Click again?".
     */
